# devilutionX

./: .editorconfig  .gitignore  Brewfile  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  appveyor.yml  defs.h  doxygen.config  enums.h  structs.h  types.h
.circleci/: config.yml
.devcontainer/: Dockerfile
.github/workflows/: clang-format-check.yml  cmake.yml  code-ql.yml  nightly.yml
CMake/: FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  amiga_defs.cmake  android_defs.cmake  cpigamesh_defs.cmake  git.cmake  gkd350h_defs.cmake  ios_defs.cmake  lepus_defs.cmake  mingw9x.toolchain.cmake  mingwcc.toolchain.cmake  mingwcc64.toolchain.cmake  n3ds_defs.cmake  ps4_defs.cmake  ps5_defs.cmake  retrofw_defs.cmake  rg350_defs.cmake  switch_defs.cmake  vita_defs.cmake  windows9x.cmake  windows9x_defs.cmake  windowsXP_defs.cmake  xbox_nxdk_defs.cmake  xboxone_defs.cmake
CMake/ctr/: FindBZIP2.cmake  FindCITRO3D.cmake  FindFREETYPE.cmake  FindMAD.cmake  FindMIKMOD.cmake  FindOGG.cmake  FindPNG.cmake  FindThreads.cmake  FindZLIB.cmake  asio_defs.cmake  n3ds_defs.cmake
CMake/switch/: asio_defs.cmake  switch_defs.cmake
CMake/xboxone/: FindSDL2.cmake
DiabloUI/: diabloui.h
Packaging/OpenDingux/: build.sh  gkd350h-manual.txt  lepus-hellfire.desktop  lepus-manual.txt  package-opk.sh  retrofw-manual.txt  rg350-manual.txt
Packaging/amiga/: Dockerfile  SIL Open Font License.txt  prep.sh
Packaging/apple/: Info.plist
Packaging/cpi-gamesh/: __init__.py  build.sh  readme.md
Packaging/ctr/: README.txt  template_hellfire.rsf
Packaging/debian/: control
Packaging/fedora/: devilutionx.spec
Packaging/nix/: AppImage.sh  LinuxReleasePackaging.sh  README.txt  debian-cross-aarch64-prep.sh  debian-cross-i386-prep.sh  debian-host-prep.sh  devilutionx-hellfire.desktop  devilutionx.6  devilutionx.desktop
Packaging/pi/: README.txt
Packaging/ps4/: README.txt  build.sh
Packaging/ps5/: README.md  README.txt  build.sh  homebrew.js
Packaging/resources/: devilutionx.mpq  devilx.mpq  diablo.ini  hdfiles.txt  listfiles.txt  mpqfiles.txt
Packaging/switch/: README.txt  build.sh
Packaging/vita/: README.txt
Packaging/windows/: README.txt  devilutionx.exe.manifest  hellfire.rc  mingw-prep.sh  mingw-prep64.sh  mingw9x-prep.sh
Packaging/xbox-one/: build.bat
Source/: .clang-format  all.h  appfat.cpp  appfat.h  automap.cpp  automap.h  capture.cpp  capture.h  codec.cpp  codec.h  control.cpp  control.h  cursor.cpp  cursor.h  dead.cpp  dead.h  debug.cpp  debug.h  diablo.cpp  diablo.h  diabloui.h  display.h  doom.cpp  doom.h  drlg_l1.cpp  drlg_l1.h  drlg_l2.cpp  drlg_l2.h  drlg_l3.cpp  drlg_l3.h  drlg_l4.cpp  drlg_l4.h  dthread.cpp  dthread.h  dx.cpp  dx.h  effects.cpp  effects.h  encrypt.cpp  encrypt.h  (+119 more)
Source/DiabloUI/: art.cpp  art.h  art_draw.cpp  art_draw.h  button.cpp  button.h  credits.cpp  credits_lines.cpp  credits_lines.h  diablo.h  diabloui.cpp  diabloui.h  dialogs.cpp  dialogs.h  errorart.cpp  errorart.h  fonts.cpp  fonts.h  hostgame.cpp  mainmenu.cpp  progress.cpp  scrollbar.cpp  scrollbar.h  selconn.cpp  selconn.h  selgame.cpp  selgame.h  selhero.cpp  selhero.h  selok.cpp  selok.h  selyesno.cpp  selyesno.h  settingsmenu.cpp  text.cpp  text.h  text_draw.cpp  text_draw.h  title.cpp  ttf_render_wrapped.cpp  (+2 more)
Source/controls/: axis_direction.cpp  axis_direction.h  controller.cpp  controller.h  controller_buttons.h  controller_motion.cpp  controller_motion.h  game_controls.cpp  game_controls.h  menu_controls.cpp  menu_controls.h  modifier_hints.cpp  modifier_hints.h  plrctrls.cpp  plrctrls.h  remap_keyboard.h  touch.cpp  touch.h
Source/dvlnet/: abstract_net.cpp  abstract_net.h  base.cpp  base.h  base_client.cpp  base_client.h  base_protocol.cpp  base_protocol.h  cdwrap.cpp  cdwrap.h  frame_queue.cpp  frame_queue.h  loopback.cpp  loopback.h  packet.cpp  packet.h  protocol_zt.cpp  protocol_zt.h  tcp_client.cpp  tcp_client.h  tcp_host.cpp  tcp_host.h  tcp_server.cpp  tcp_server.h  tcpd_client.cpp  tcpd_client.h  zerotier_lwip.cpp  zerotier_lwip.h  zerotier_native.cpp  zerotier_native.h  zt_client.cpp  zt_client.h
Source/engine/: cel_util.cpp  cel_util.h  engine.cpp  engine.h
Source/miniwin/: miniwin.h  misc_msg.cpp
Source/storm/: storm.cpp  storm.h  storm_cfg.cpp  storm_cfg.h  storm_net.cpp  storm_net.h  storm_svid.cpp  storm_svid.h
Source/utils/: console.h  display.cpp  display.h  endian.hpp  file_util.h  filestream.h  log.h  paths.cpp  paths.h  screen_reader.cpp  screen_reader.hpp  sdl2_backports.h  sdl2_to_1_2_backports.cpp  sdl2_to_1_2_backports.h  sdl_bilinear_scale.cpp  sdl_bilinear_scale.hpp  sdl_compat.h  sdl_ptrs.h  soundsample.cpp  soundsample.h  stubs.h  thread.cpp  thread.h  utf8.cpp  utf8.h
SourceS/: console.h  file_util.h  miniwin.h  paths.cpp  sdl2_to_1_2_backports.cpp  sdl2_to_1_2_backports.h  sdl_compat.h  soundsample.h  ui_fwd.h
SourceS/miniwin/: misc.h
SourceT/: automap_test.cpp  control_test.cpp  cursor_test.cpp  dead_test.cpp  diablo_test.cpp  doom_test.cpp  drlg_l2_test.cpp  drlg_l3_test.cpp  drlg_l4_test.cpp  lighting_test.cpp  player_test.cpp  stores_test.cpp
SourceX/: display.cpp  display.h  dx.cpp  sound.cpp  soundsample.cpp  thread.cpp
SourceX/DiabloUI/: art.cpp  art.h  art_draw.cpp  art_draw.h  button.cpp  button.h  credits.cpp  credits_lines.cpp  credits_lines.h  dialogs.h  (+28 more)
android-project/: build.gradle  gradle.properties
docs/: BACKGROUND.md  CHANGELOG.md  building.md  github-codespaces.md  installing.md
test/: .clang-format  appfat_test.cpp  automap_test.cpp  codec_test.cpp  control_test.cpp  cursor_test.cpp  dead_test.cpp  diablo_test.cpp  drlg_l1_test.cpp  drlg_l2_test.cpp  drlg_l3_test.cpp  drlg_l4_test.cpp  file_util_test.cpp  gfx_test.cpp  lighting_test.cpp  missiles_test.cpp  player_test.cpp  projectile_test.cpp  scrollrt_test.cpp  sfx_test.cpp  stores_test.cpp
tools/: celtools.cpp  cmtools.cpp  cmtools_c.h  mintools.cpp
uwp-project/: Package.appxmanifest  Package.appxmanifest.template  Patcher.appxmanifest  Patcher.appxmanifest.template  devil_patcher.sln  devil_patcher.vcxproj  devilutionx.sln  devilutionx.vcxproj
(+296 files in other folders)
